<resources>
    <string name="app_name">Football Pocket</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="event_list">Event List</string>
    <string name="team_list">Team List</string>
    <string name="next_event">Next Event</string>
    <string name="football">Football</string>
    <string name="sunday_august_20_2018">Sunday, August 20 2018</string>


    <string name="pref_file">id.riotfallen.footballpocket.preference_file</string>
    <string name="pref_id_league">id.riotfallen.footballpocket.preference_id_league</string>
    <string name="pref_id_team">id.riotfallen.footballpocket.preference_id_team</string>


    <string name="english_premier_league">English Premier League</string>
    <string name="icon">icon</string>
    <string name="your_favorite_team_player">Your favorite team player</string>
    <string name="select_league">Select league</string>
    <string name="change_team_favorite">Change Team Favorite</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favorites</string>
    <string name="favorite_event">Favorite Event</string>
    <string name="player_fanart">Player Fanart</string>
    <string name="height_meter">Height (Meter)</string>
    <string name="weight_kilogram">Weight (Kilogram)</string>
    <string name="search">Search</string>
    <string name="badge">Badge</string>
    <string name="vs">VS</string>
    <string name="shots">Shots</string>
    <string name="linesups">Linesups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">MidField</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="banner">Banner</string>
    <string name="strip">-</string>
    <string name="notification">Notification</string>
    <string name="space_strip">-</string>
    <string name="player">Player</string>
</resources>
