<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="220dp"
    android:paddingTop="10dp"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:layout_marginEnd="20dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_shadow">
    <TextView
        android:id="@+id/viheTextDate"
        android:text="@string/sunday_august_20_2018"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viheTextDate">
        <LinearLayout
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:ignore="RelativeOverlap,UseCompoundDrawables">
            <ImageView
                android:id="@+id/viheImageViewHome"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/badge" />
            <TextView
                android:id="@+id/viheTextViewHome"
                android:maxLength="3"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:ignore="RelativeOverlap">
            <TextView
                android:id="@+id/viheTextViewScoreHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/space_strip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/viheTextViewScoreAway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:ignore="RelativeOverlap,UseCompoundDrawables">
            <TextView
                android:id="@+id/viheTextViewAway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:maxLength="3" />
            <ImageView
                android:id="@+id/viheImageViewAway"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/badge" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
