<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EventDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarEventDetail"
            android:elevation="0dp"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_width="match_parent"/>
    </android.support.design.widget.AppBarLayout>
    <ProgressBar
        android:id="@+id/progressbarEventDetail"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollViewEventDetail"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewEventDate"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>
            <!-- header -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/imageViewBadgeHome"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="30dp"
                        android:contentDescription="@string/badge" />
                    <TextView
                        android:id="@+id/textViewHomeScore"
                        android:textStyle="bold"
                        android:textSize="35sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp" />
                </LinearLayout>

                <TextView
                    android:layout_marginEnd="5dp"
                    android:textSize="18sp"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vs" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/textViewAwayScore"
                        android:textStyle="bold"
                        android:textSize="35sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp" />
                    <ImageView
                        android:id="@+id/imageViewBadgeAway"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="30dp"
                        android:contentDescription="@string/badge" />
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textViewHomeGoal"
                    android:layout_alignParentStart="true"
                    android:gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:id="@+id/textViewAwayGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <!-- end header -->

            <!-- shoot -->
            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_alignParentStart="true"
                    android:id="@+id/TextViewShotHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/shots"
                    android:textColor="@color/colorAccent"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_alignParentEnd="true"
                    android:id="@+id/TextViewShotAway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <!-- end shot -->

            <!-- Forward -->
            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/linesups"
                    android:textSize="16sp"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>
            <!-- end Forward -->

            <!-- Goal Keeper -->
            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_alignParentStart="true"
                    android:id="@+id/TextViewGKHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/goal_keeper"
                    android:textColor="@color/colorAccent"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_alignParentEnd="true"
                    android:id="@+id/TextViewGKAway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <!-- end Goal Keeper -->

            <!-- Defense -->
            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_alignParentStart="true"
                    android:id="@+id/TextViewDefenseHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/defense"
                    android:textColor="@color/colorAccent"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_alignParentEnd="true"
                    android:id="@+id/TextViewDefenseAway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <!-- end Defense -->

            <!-- Midfield -->
            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_alignParentStart="true"
                    android:id="@+id/TextViewMidFieldHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/midfield"
                    android:textColor="@color/colorAccent"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_alignParentEnd="true"
                    android:id="@+id/TextViewMidFieldAway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <!-- end Midfield -->

            <!-- Forward -->
            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_alignParentStart="true"
                    android:id="@+id/TextViewForwardHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/forward"
                    android:textColor="@color/colorAccent"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_alignParentEnd="true"
                    android:id="@+id/TextViewForwardAway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <!-- end Forward -->

            <!-- Substitutes -->
            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_alignParentStart="true"
                    android:id="@+id/TextViewSubstitutesHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/substitutes"
                    android:textColor="@color/colorAccent"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_alignParentEnd="true"
                    android:id="@+id/TextViewSubstitutesAway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <!-- end Substitutes -->

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>